# learn-rust

./: .gitignore
exercises/: quiz1.rs  quiz3.rs  quiz4.rs
exercises/advanced_errors/: advanced_errs2.rs
exercises/clippy/: clippy1.rs  clippy2.rs
exercises/collections/: hashmap1.rs  hashmap2.rs  vec1.rs  vec2.rs
exercises/conversions/: from_into.rs  from_str.rs  try_from_into.rs
exercises/enums/: enums3.rs
exercises/error_handling/: errors1.rs  errors2.rs  errors5.rs  errors6.rs
exercises/functions/: functions1.rs
exercises/generics/: generics2.rs  generics3.rs
exercises/if/: if1.rs  if2.rs
exercises/macros/: macros4.rs
exercises/modules/: modules1.rs
exercises/option/: option1.rs  option2.rs  option3.rs
exercises/primitive_types/: primitive_types3.rs  primitive_types5.rs
exercises/standard_library_types/: arc1.rs  box1.rs  iterators2.rs  iterators3.rs  iterators4.rs  iterators5.rs
exercises/structs/: structs1.rs  structs3.rs
exercises/tests/: tests3.rs
exercises/threads/: threads1.rs
exercises/traits/: traits2.rs
exercises/variables/: variables4.rs  variables5.rs
httpie/: Cargo.toml
httpie/src/: main.rs
kv/: Cargo.toml
kv/examples/: Cargo.toml  client.rs
kv/kv/: Cargo.toml
kv/kv/src/: error.rs  lib.rs  main.rs
kv/kv/src/pb/: abi.rs  mod.rs
kv/kv/src/service/: command_service.rs  mod.rs
kv/kv/src/storage/: memory.rs  mod.rs
rgrep/: Cargo.toml
rgrep/src/: error.rs  lib.rs  main.rs
thumbor/: Cargo.toml
thumbor/src/: main.rs
thumbor/src/engine/: mod.rs
thumbor/src/pb/: mod.rs
